refactor: ads service
